# Mini-SPA

./: .gitignore  CMakeLists.txt  input_min.txt  main.cpp  nodes.cpp  nodes.h  parser.cpp  parser.h  pkb.cpp  pkb.h  query.cpp  query.h  queryInput.txt  utils.cpp  utils.h
Query/: Instruction.cpp  Instruction.h  SubInstruction.cpp  SubInstruction.h  SynonymConstraint.cpp  SynonymConstraint.h  query.cpp  query.h
files/: input_min.txt  input_min2.txt  input_min3.txt  query_input.txt  query_input2.txt  query_output.txt  query_output_partial.txt
libs/benchmark_tool/: CMakeLists.txt  benchmark_tool.cpp  benchmark_tool.h
libs/fmt_formatter/: CMakeLists.txt  fmt_formatter.cpp  fmt_formatter.h
